@@ -1,6 +1,7 @@
 python-apt (0.8.0~exp5) UNRELEASED; urgency=low
 
   * Increase Breaks for update-notifier to 0.99.3debian9
+  * utils/get_debian_mirrors.py: Adjust for new Alioth SCM urls
 
  -- Julian Andres Klode <jak@debian.org>  Thu, 26 May 2011 18:01:57 +0200
 
